--- a/components/posts-list/posts-list.module.css
+++ b/components/posts-list/posts-list.module.css
@@ -2,4 +2,14 @@
   display: flex;
   flex-direction: column;
   padding: 0;
+  list-style-type: none;
+}
+
+.buttonContainer {
+  display: flex;
+
+  margin: 60px auto;
+
+  flex-wrap: wrap;
+  justify-content: center;
 }
