--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -2,3 +2,69 @@ body {
   font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   margin: 0 auto;
 }
+
+a {
+  text-decoration: none;
+  color: #242424;
+  transition: 0.5s;
+}
+
+a:hover {
+  opacity: 0.6;
+}
+
+.button {
+  display: flex;
+  overflow: hidden;
+
+  margin: 10px;
+  padding: 12px 12px;
+
+  cursor: pointer;
+  user-select: none;
+  transition: all 150ms linear;
+  text-align: center;
+  white-space: nowrap;
+  text-decoration: none !important;
+  text-transform: none;
+  text-transform: capitalize;
+
+  color: #fff;
+  border: 0 none;
+  border-radius: 36px;
+
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 1.3;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  justify-content: center;
+  align-items: center;
+  flex: 0 0 160px;
+
+  box-shadow: 2px 5px 10px #e4e4e4;
+}
+
+.button:focus {
+  outline: 1px dotted #959595;
+  outline-offset: -4px;
+}
+
+.button:hover {
+  transition: all 150ms linear;
+
+  opacity: 0.85;
+}
+
+.button:active {
+  transition: all 150ms linear;
+  opacity: 0.75;
+}
+
+.-blue {
+  color: #ffffff;
+  background: #416dea;
+}
