--- a/components/entry/text.module.css
+++ b/components/entry/text.module.css
@@ -2,6 +2,7 @@
   position: relative;
   -webkit-transform: translateY(0px);
   transform: translateY(0px);
+  border: 1px solid var(--border);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
   max-width: 36rem;
@@ -34,7 +35,7 @@
   padding: 0.3rem 0.8rem 0.5rem;
   border-radius: 40px;
   transition: 0.5s;
-  font-weight: 200;
+  font-weight: 300;
   color: #ffffff;
   background-color: #3dd28d;
 }
