--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -12,11 +12,25 @@
   padding: 0.3rem;
 }
 
+.btn {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+.btn:hover,
+.btn:focus {
+  outline: none;
+  background: none;
+}
+
 .containerNavbar {
   display: flex;
   padding: 1rem 1.5rem;
   margin: 0 auto;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
 }
 
@@ -30,10 +44,4 @@
 .brandContainer {
   display: flex;
   align-items: center;
-}
-
-.icon {
-  color: #fff;
-  width: 16px;
-  margin: 0 7px;
 }
