--- a/components/post/navigation.module.css
+++ b/components/post/navigation.module.css
@@ -15,21 +15,10 @@
   text-align: right;
 }
 
-/* p {
-  color: #999;
+.previous,
+.next {
+  max-width: 45%;
 }
-
-a {
-  display: flex;
-  align-items: center;
-  margin-right: -1rem;
-  font-weight: bold;
-  color: #251f6e;
-}
-
-svg {
-  margin-left: 0.5rem;
-} */
 
 .previous p,
 .next p {
@@ -45,13 +34,4 @@ svg {
 .next a {
   font-weight: bold;
   color: var(--accent);
-}
-
-.previous a svg {
-  margin-right: 0.5rem;
-}
-
-.center {
-  text-align: center;
-  padding: 1rem;
 }
