feat(biography): add component and content for biography

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -45,3 +45,9 @@
   display: flex;
   align-items: center;
 }
+
+.biographyContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
